--- a/package.json
+++ b/package.json
@@ -32,5 +32,5 @@
     "uglify-js-brunch": "^2.10.0",
     "uglifyify": "^5.0.1"
   },
-  "homepage": "https://NadaH.github.io/react-tutorial"
+  "homepage": "https://github.com/NadaH/react-tutorial.git"
 }
